# SQuADDS

./: .buildinfo  .dockerignore  .env.example  .env.mcp.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_DEVELOPER_GUIDE.md  MCP_README.md  PYAEDT_COMPATIBILITY.md  README.md  WISHLIST.md  cavity_qubit_sim_script.py  environment.yml  filename_08022024_20.06.41.json  filename_08022024_23.54.03.json  filename_09022024_09.47.18.json  filename_09022024_10.15.23.json  filename_09022024_10.43.41.json  filename_09022024_11.12.03.json  genindex.html  getting_started.html  hfss_eig_f_convergence.csv  imports_test.py  index.html  modules.html  next_release.md  objects.inv  py-modindex.html  pyproject.toml  readout_n_transmon.ipynb  release_notes.html  requirements-core.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.html  (+12 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/installation/: unix_install.doctree
.doctrees/source/: getting_started.doctree  imports_test.doctree  mcp_server.doctree  ml_models.doctree  modules.doctree  release_notes.doctree  squadds.calcs.doctree  squadds.components.airbridge.doctree  squadds.components.doctree  squadds.core.doctree  squadds.database.doctree  squadds.doctree  squadds.gds.doctree  squadds.interpolations.doctree  squadds.simulations.doctree  squadds.simulations.drivenmodal.doctree  squadds.ui.doctree  squadds_mcp.doctree  squadds_mcp.prompts.doctree  squadds_mcp.resources.doctree  squadds_mcp.tools.doctree  test_plan.doctree
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  GENERAL_ISSUE.md  INSTALLATION_ISSUE.md  squadds-mcp-sync.yml
.github/workflows/: actionlint.yml  ci.yml  dependency-review.yml  docker-build.yml  mcp-sync-notify.yml  mcp-tests.yml  package-validation.yml  pre-commit.yml  prepare-release.yml  pypi.yml  release-drafter.yml  test_build.yml  test_requirements.yml  update_contributors.yml
_modules/: index.html  test_plan.html
_modules/huggingface_hub/: hf_api.html
_modules/squadds_mcp/: drivenmodal_playbook.html  schemas.html  simulation_playbook.html  utils.html
_sources/: getting_started.rst.txt  index.rst.txt  release_notes.rst.txt  squadds.core.rst.txt  squadds.rst.txt
_sources/developer/: index.rst.txt
_sources/explanations/: index.rst.txt
_sources/how_to/: index.rst.txt
_sources/source/: getting_started.rst.txt  mcp_server.rst.txt  ml_models.rst.txt  modules.rst.txt  release_notes.rst.txt  squadds.calcs.rst.txt  squadds.components.airbridge.rst.txt  squadds.components.rst.txt  (+13 more)
_static/: documentation_options.js
apidocs/: index.html
developer/: index.html
docs/: Makefile  conf.py  index.rst  requirements.txt
explanations/: index.html
how_to/: index.html
installation/: unix_install.html
references/: index.html
scripts/: update_contributors.py
source/: getting_started.html  imports_test.html  mcp_server.html  ml_models.html  modules.html  release_notes.html  setup.html  squadds.calcs.html  squadds.components.airbridge.html  squadds.components.html  squadds.core.html  squadds.database.html  squadds.gds.html  squadds.html  squadds.interpolations.html  squadds.simulations.drivenmodal.html  squadds.simulations.html  squadds.ui.html  squadds_mcp.html  squadds_mcp.prompts.html  squadds_mcp.resources.html  squadds_mcp.tools.html  test_plan.html
squadds/: HuggingFace&Github.py  __init__.py
squadds_mcp/: __init__.py  drivenmodal_playbook.py  schemas.py  server.py  simulation_playbook.py  utils.py
tests/: conftest.py  hwc_test.py  imports_test.py  mvp_test.py  test_analysis_enrichment.py  test_analysis_plotting.py  test_analysis_search.py  test_ansys_simulator.py  test_contributor_env.py  test_contributor_file_ops.py  test_contributor_records.py  test_contributor_schema.py  test_contributor_validation.py  test_core_utils_modules.py  test_db_catalog.py  test_db_devices.py  test_db_half_wave.py  test_db_loader.py  test_db_merge.py  test_db_selection.py  test_db_state.py  test_db_views.py  test_dependency_constraints.py  test_drivenmodal_artifacts.py  test_drivenmodal_capacitance.py  test_drivenmodal_coupled_postprocess.py  test_drivenmodal_design.py  test_drivenmodal_extractors.py  test_drivenmodal_hfss_data.py  test_drivenmodal_layer_stack.py  test_drivenmodal_models.py  test_drivenmodal_ports.py  test_drivenmodal_qubit_admittance.py  test_drivenmodal_tutorial_docs.py  test_drivenmodal_tutorial_style.py  test_drivenmodal_workflows.py  test_github_ops.py  test_hf_dataset_ops.py  test_json_utils.py  test_mcp_drivenmodal.py  (+12 more)
tutorials/: Tutorial-0_Using_the_SQuADDS_WebUI.ipynb  Tutorial-10_DrivenModal_Capacitance_Extraction.ipynb  Tutorial-10_DrivenModal_Capacitance_Extraction.py  Tutorial-11_DrivenModal_Combined_Hamiltonian_Extraction.ipynb  Tutorial-11_DrivenModal_Coupled_System_Postprocessing.py  Tutorial-12_DrivenModal_Qubit_Port_Admittance.py  Tutorial-13_DrivenModal_Combined_Hamiltonian_Extraction.py  Tutorial-1_Getting_Started_with_SQuADDS.html  Tutorial-1_Getting_Started_with_SQuADDS.ipynb  Tutorial-1_getting_started_with_SQuADDS.html  Tutorial-1_getting_started_with_SQuADDS.ipynb  Tutorial-2_Contributing_to_SQuADDS.html  Tutorial-2_Contributing_to_SQuADDS.ipynb  Tutorial-2_Simulate_interpolated_designs.html  Tutorial-2_Simulate_interpolated_designs.ipynb  Tutorial-3_Contributing_Validated_Simulation_Data_to_SQuADDS.ipynb  Tutorial-3_Contributing_to_SQuADDS.html  Tutorial-3_Contributing_to_SQuADDS.ipynb  Tutorial-3_ML_interpolation_in_SQuADDS.ipynb  Tutorial-3p5_Creating_a_new_dataset.ipynb  Tutorial-4_Creating_a_new_dataset.ipynb  Tutorial-5_Designing_a_fab_ready_chip_with_SQuADDS.ipynb  Tutorial-7_Simulate_designs_with_palace.ipynb  Tutorial-8_ML_interpolation_in_SQuADDS.ipynb  Tutorial-9_Learing_the_Inverse_Design_Map.ipynb  export_docsite_notebooks.py  hfss_eig_f_convergence.csv  index.html  qubit_cavity.gds
(+489 files in other folders)
