[project]
name = "SQuADDS"
version = "0.4.3"
description = "Open-source database of programmatically generated and experimentally validated superconducting quantum device designs, accessible through a user-friendly interface."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sadman Ahmed Shanto", email = "shanto@usc.edu" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # === Data & HuggingFace ===
    "datasets>=2.19",
    "huggingface-hub>=0.21",
    # === Scientific Computing ===
    "numpy>=1.16.6,<2.0",
    "pandas>=1.5",
    "scipy>=1.10",
    "numba>=0.60",
    "scqubits>=4.0",
    "pyepr-quantum>=0.8.5",
    # === Visualization ===
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "datashader>=0.16",
    "plotly>=5.0",
    # === Utilities ===
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tqdm>=4.0",
    "tabulate>=0.9",
    "prettytable>=3.0",
    "joblib>=1.3",
    "shapely>=2.0",
    # === ANSYS/Simulation ===
    "pyaedt==0.23",
    # === Web UI ===
    "streamlit>=1.45",
    "quantum-metal>=0.5.0",
    "pyside6>=6.10.1",
    "gmsh>=4.15.0",
]

[project.optional-dependencies]
gds = [
    "klayout>=0.29",
    "gdspy>=1.6",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "qiskit-sphinx-theme",
    "nbsphinx>=0.9",
    "jupyter-sphinx>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "reno>=4.0",
    "sphinxcontrib-katex>=0.9",
    "myst-parser>=2.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.11",
]
contrib = [
    # GitHub integration for data contribution workflow
    "pygithub>=2.4",
    "gitpython>=3.1",
]
all = ["SQuADDS[gds,docs,dev,contrib]"]

[project.urls]
Homepage = "https://github.com/LFL-Lab/SQuADDS"
Documentation = "https://lfl-lab.github.io/SQuADDS/"
Repository = "https://github.com/LFL-Lab/SQuADDS"
Issues = "https://github.com/LFL-Lab/SQuADDS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["squadds"]

[tool.hatch.build.targets.sdist]
include = [
    "squadds/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "docs/",
    "tutorials/",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "B905",  # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["squadds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "tutorials"]
skips = ["B101", "B311"]  # Skip assert and random warnings

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
